--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li> <a href="https://youtube.com/"> fooball </li> </a>
   </ul>
   <hr>
-  <h3> <a href="contact.html">cONTACT</a> </h3>
+  <h3> <a href="contact.html">CONTACT</a> </h3>
   <table border="1">
     <th colspan="4">BOOKS READ</th>
     <tr>
