--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>contact</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>aa@vh.com</h1>
+    <h1 id="maillto">aa@vh.com</h1>
     <hr>
   <h1>   contact me</h1>
   <form class="" action="mailto:aalgade@gmail.com" method="post" enctype="text/plain">
